--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-APP_NAME=service
+APP_NAME=sparkle
+
 GITHUB_TOKEN=https://github.com/settings/tokens
+
+SLACK_APP=https://api.slack.com/apps/
+
+TELEGRAM_APP=https://my.telegram.org/apps
