dev: configure buf generator

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 APP_NAME=sparkle
 
+BUF_TOKEN=https://buf.build/settings/user
+
 GITHUB_TOKEN=https://github.com/settings/tokens
 
 SLACK_APP=https://api.slack.com/apps/
