--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   release:
+    name: Releasing
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -24,7 +25,7 @@ jobs:
         with: { fetch-depth: 0 }
       - name: Set up Go environment
         uses: actions/setup-go@v4
-        with: { go-version: 1.20.x, cache-dependency-path: tools/go.sum, check-latest: true }
+        with: { go-version: 1.21.x, cache-dependency-path: tools/go.sum, check-latest: true }
 
       - name: Run fast check and tests
         run: make fast-check test
