ci/cd: refactoring to chaining

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ on:
       - '**.go'
       - 'go.{mod,sum}'
       - 'Makefile'
+    tags: [ 'v*' ]
 
   schedule:
     - cron: 0 7 1 * * # at 07:00 on day-of-month 1, UTC
@@ -84,8 +85,8 @@ jobs:
         if: matrix.go == '1.21.x'
       - name: Store code coverage report
         uses: actions/upload-artifact@v3
-        if: matrix.go == '1.21.x'
         with: { name: code-coverage-report, path: c.out }
+        if: matrix.go == '1.21.x'
 
       - name: Check installation
         run: |
