--- a/.github/actions/notify/action.yml
+++ b/.github/actions/notify/action.yml
@@ -38,6 +38,13 @@ runs:
         message
         ) | head -1 >> $GITHUB_OUTPUT
 
+        elif [ '${{ github.event.workflow_run != null }}' == 'true' ]
+        then
+          (cat <<-message
+        txt=triggered by the ${{ github.event.workflow_run.name }} action
+        message
+        ) | head -1 >> $GITHUB_OUTPUT
+
         elif [ '${{ github.event.schedule != null }}' == 'true' ]
         then
           echo txt='regular healthcheck' >> $GITHUB_OUTPUT
@@ -48,6 +55,7 @@ runs:
 
     - name: Send Slack notification
       uses: rtCamp/action-slack-notify@v2
+      if: ${{ inputs.channel != '' }}
       env:
         SLACK_COLOR: ${{ inputs.success == 'true' && 'success' || 'failure' }}
         SLACK_FOOTER: made with ❤️ for everyone by <https://www.octolab.org/|OctoLab>
@@ -56,4 +64,3 @@ runs:
         SLACK_TITLE: '${{ inputs.emoji }} ${{ github.repository }}: ${{ github.workflow }}'
         SLACK_USERNAME: Notifier
         SLACK_WEBHOOK: ${{ inputs.channel }}
-      if: ${{ env.SLACK_WEBHOOK != '' }}
