--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,10 +9,17 @@ on:
         default: manual healthcheck
         required: true
 
+  workflow_run:
+    workflows: [ Continuous integration ]
+    types: [ completed ]
+    branches: [ main ]
+
 jobs:
   release:
     name: Releasing
     runs-on: ubuntu-latest
+    if: ${{ contains(fromJSON('[null, "success"]'), github.event.workflow_run.conclusion) }}
+
     permissions:
       contents: write
 
@@ -22,18 +29,22 @@ jobs:
         with: { fetch-depth: 0 }
       - name: Set up Go environment
         uses: actions/setup-go@v4
-        with: { go-version: 1.21.x, cache-dependency-path: tools/go.sum, check-latest: true }
+        with:
+          go-version: 1.21.x
+          check-latest: true
 
-      - name: Run fast check and tests
-        run: make fast-check test
+      - name: Debugging
+        run: echo "${{ toJSON(github.ref) }}"
+
       - name: Publish the release
         uses: goreleaser/goreleaser-action@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
         with:
           distribution: goreleaser
           version: latest
           args: release --clean
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
   notify:
     name: Notifying
