--- a/.github/workflows/cleanup.runs.yml
+++ b/.github/workflows/cleanup.runs.yml
@@ -11,9 +11,9 @@ on:
         type: choice
         options:
           - All
-          - Continuous delivery
           - Continuous integration
           - Documentation delivery
+          - Release delivery
           - Stale issues cleanup
           - Tools validation
           - Workflow caches cleanup
