--- a/.github/workflows/cd.bins.yml
+++ b/.github/workflows/cd.bins.yml
@@ -1,6 +1,8 @@
-name: Continuous delivery
+name: Release delivery
 
 on:
+  workflow_call:
+
   workflow_dispatch:
     inputs:
       reason:
@@ -9,40 +11,34 @@ on:
         default: manual healthcheck
         required: true
 
-  workflow_run:
-    workflows: [ Continuous integration ]
-    types: [ completed ]
-    branches: [ main ]
+concurrency:
+  group: bins
+  cancel-in-progress: true
 
 jobs:
   release:
     name: Releasing
     runs-on: ubuntu-latest
-    if: ${{ contains(fromJSON('[null, "success"]'), github.event.workflow_run.conclusion) }}
 
     permissions:
       contents: write
 
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.1.0
         with: { fetch-depth: 0 }
       - name: Set up Go environment
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v4.1.0
         with:
           go-version: 1.21.x
           check-latest: true
 
-      - name: Debugging
-        run: echo "${{ toJSON(github.ref) }}"
-
       - name: Publish the release
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v5.0.0
         with:
           distribution: goreleaser
           version: latest
-          args: release --clean
-        if: startsWith(github.ref, 'refs/tags/')
+          args: release --clean --fail-fast
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
@@ -54,7 +50,7 @@ jobs:
 
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.1.0
         with: { fetch-depth: 0 }
 
       - name: Send notification
