--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,15 +92,16 @@ jobs:
           make server install
           [ $(ls bin/linux/*/* | wc -l) = 2 ]
 
+  publish:
+    name: Publishing
+    needs: [ test ]
+    uses: ./.github/workflows/cd.docs.yml
+
   release:
     name: Releasing
     needs: [ test ]
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/cd.bins.yml
     if: startsWith(github.ref, 'refs/tags/v')
-
-    steps:
-      - name: Release publishing
-        uses: ./.github/workflows/cd.bins.yml
 
   report:
     name: Reporting
