--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,11 +96,16 @@ jobs:
     name: Publishing
     needs: [ test ]
     uses: ./.github/workflows/cd.docs.yml
+    permissions:
+      id-token: write
+      pages: write
 
   release:
     name: Releasing
     needs: [ test ]
     uses: ./.github/workflows/cd.bins.yml
+    permissions:
+      contents: write
     if: startsWith(github.ref, 'refs/tags/v')
 
   report:
