ci/cd: disable squash merge

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -6,8 +6,8 @@ repository:
   allow_forking: true
 
   allow_merge_commit: false
-  allow_squash_merge: true
-  use_squash_pr_title_as_default: true
+  allow_squash_merge: false
+  use_squash_pr_title_as_default: false
   allow_rebase_merge: true
   allow_update_branch: false
   allow_auto_merge: false
