--- a/.github/workflows/cd.bins.yml
+++ b/.github/workflows/cd.bins.yml
@@ -20,9 +20,6 @@ jobs:
     name: Releasing
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write
-
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4.1.0
@@ -40,7 +37,7 @@ jobs:
           version: latest
           args: release --clean --fail-fast
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
 
   notify:
     name: Notifying
