ci/cd: try to fix broken nested builds

--- a/.github/workflows/cd.bins.yml
+++ b/.github/workflows/cd.bins.yml
@@ -2,6 +2,9 @@ name: Release delivery
 
 on:
   workflow_call:
+    secrets:
+      GORELEASER_TOKEN:
+        required: true
 
   workflow_dispatch:
     inputs:
