--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,8 @@ jobs:
           go-version: 1.21.x
           check-latest: true
 
-      # TODO:debt
-      #  skipped until golangci-lint-action won't be implemented
-      #  or tools won't be optimized
+      - name: Run linter
+        uses: golangci/golangci-lint-action@v3.7.0
 
   test:
     name: Testing
@@ -99,11 +98,14 @@ jobs:
     permissions:
       id-token: write
       pages: write
+    if: true
 
   release:
     name: Releasing
     needs: [ test ]
     uses: ./.github/workflows/cd.bins.yml
+    secrets:
+      GORELEASER_TOKEN: ${{ secrets.GORELEASER_TOKEN }}
     if: startsWith(github.ref, 'refs/tags/v')
 
   report:
@@ -121,7 +123,7 @@ jobs:
 
   notify:
     name: Notifying
-    needs: [ lint, test ]
+    needs: [ lint, report ]
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
       && (failure() || success())
