--- a/.github/workflows/cd.docs.yml
+++ b/.github/workflows/cd.docs.yml
@@ -46,7 +46,11 @@ jobs:
         run: ./Taskfile docs npm ci
 
       - name: Build the documentation
-        run: ./Taskfile docs publish
+        run: |
+          path=$(gh api repos/${{ github.repository }}/pages --jq '.html_url')
+          TARGET=static BASE_PATH="${path}" ./Taskfile docs build
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
       - name: Upload the documentation
         uses: actions/upload-pages-artifact@v2.0.0
         with: { path: docs/dist }
