--- a/.github/workflows/cleanup.runs.yml
+++ b/.github/workflows/cleanup.runs.yml
@@ -35,10 +35,12 @@ jobs:
   delete:
     name: Deleting
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
 
     steps:
       - name: Delete workflow runs
-        uses: Mattraks/delete-workflow-runs@v2
+        uses: Mattraks/delete-workflow-runs@v2.0.4
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
@@ -67,7 +69,7 @@ jobs:
 
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.1.0
         with: { fetch-depth: 0 }
 
       - name: Send notification
