--- a/.github/workflows/cleanup.stale.yml
+++ b/.github/workflows/cleanup.stale.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron: 0 6 * * * # at 06:00 every day, UTC
 
+  workflow_call:
+
   workflow_dispatch:
     inputs:
       reason:
