dev: add tg-bot to the sandbox

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ GITHUB_TOKEN=https://github.com/settings/tokens
 SLACK_APP=https://api.slack.com/apps/
 
 TELEGRAM_APP=https://my.telegram.org/apps
+
+TELEGRAM_BOT=https://t.me/BotFather
