chore: extend github include list for github-dump poc

--- a/tests/sandbox/github-dump/config.toml
+++ b/tests/sandbox/github-dump/config.toml
@@ -19,7 +19,9 @@ list = [
   'kamilsk/godownloader',
   'kamilsk/go-tools',
   'kamilsk/golangci-lint',
+  'under-the-hood/docs',
   'under-the-hood/persona',
+  'under-the-hood/search',
 ]
 
 [github.exclude]
