dev: define env and docker compose file

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ SLACK_APP=https://api.slack.com/apps/
 TELEGRAM_APP=https://my.telegram.org/apps
 
 TELEGRAM_BOT=https://t.me/BotFather
+
+TYPESENSE_API_KEY=https://typesense.org/docs/0.25.1/api/server-configuration.html
