--- a/.github/workflows/cleanup.runs.yml
+++ b/.github/workflows/cleanup.runs.yml
@@ -41,15 +41,20 @@ jobs:
 
     steps:
       - name: Delete workflow runs
-        uses: Mattraks/delete-workflow-runs@v2.0.4
+        uses: Mattraks/delete-workflow-runs@v2.0.5
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
-          delete_workflow_pattern: ${{ github.event.inputs.pattern || 'all' }}
+          delete_workflow_pattern: >-
+            ${{
+              github.event.inputs.pattern != 'All'
+              && github.event.inputs.pattern
+              || ''
+            }}
           dry_run: ${{ fromJSON('["", "true"]')[github.event.inputs.dry_run == 'true'] }}
           retain_days: 0
           keep_minimum_runs: 0
-      - name: Cleanup workflow runs
+      - name: Finishing workflow runs deletion
         run: |
           gh run list \
             -R '${{ github.repository }}' \
