docs: update readme and extend .env example, add Daily notes plugin documentation link

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,17 @@ BUF_TOKEN=https://buf.build/settings/user
 GITHUB_TOKEN=https://github.com/settings/tokens
 
 SLACK_APP=https://api.slack.com/apps/
+SLACK_APP_ID=
+SLACK_APP_TOKEN=
+SLACK_BOT_TOKEN=
+SLACK_TOKEN=
 
 TELEGRAM_APP=https://my.telegram.org/apps
+TELEGRAM_APP_ID=
+TELEGRAM_APP_HASH=
 
 TELEGRAM_BOT=https://t.me/BotFather
+TELEGRAM_BOT_NAME=
+TELEGRAM_BOT_TOKEN=
 
 TYPESENSE_API_KEY=https://typesense.org/docs/0.25.1/api/server-configuration.html
